[package]
name = "ash-helper"
description = "Helper functions for working with ash"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Trent Shailer"]

[dependencies]
thiserror = { version = "2", default-features = false }

ash = { version = "0.38", default-features = false, features = [
    "std",
    "debug",
] }

parking_lot = "0.12"

tracing = "0.1"
