[package]
authors = ["Trent Shailer"]
description = "Helper functions for working with ash"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "ash-helper"
rust-version = "1.85"
version = "0.7.0"

[dependencies]
thiserror = { version = "2", default-features = false }

ash = { version = "0.38", default-features = false, features = ["debug", "std"] }

parking_lot = "0.12"

tracing = "0.1"

vp-ash = { git = "https://github.com/TrentShailer/vulkan-profiles-ash.git", branch = "vulkan-sdk-1.4.304", optional = true, default-features = false }

[features]
vk-global-allocator = []
vulkan-profiles = ["vp-ash"]

[lints.rust]
"deprecated_in_future" = "warn"
"missing_docs" = "warn"
"rust_2018_idioms" = "warn"
"unused_qualifications" = "warn"

[lints.clippy]
"alloc_instead_of_core" = "warn"
"std_instead_of_alloc" = "warn"
"std_instead_of_core" = "warn"

"cast_lossless" = "warn"
"inconsistent_struct_constructor" = "warn"
"unnecessary_self_imports" = "warn"
"use_self" = "warn"

"clone_on_ref_ptr" = "warn"
"default_trait_access" = "warn"
"todo" = "warn"

"missing_safety_doc" = "allow"
